prusti-tests/tests/verify/fail/arrays-slices/wrong-value.rs
use prusti_contracts::*;

fn main() {}


fn all_equal(a: [i32; 2]) {
    assert!(a[0] == a[1]);  //~ ERROR asserted expression might not hold
}
